--- a/css/iparanoid.css
+++ b/css/iparanoid.css
@@ -74,5 +74,5 @@
 
   --lyric-icon-background-color: #ffffff;
   --lyric-font-size: 15px;
-  --lyric-line-margin: 13px;
+  --lyric-line-margin: 20px;
 }
