--- a/css/origin.css
+++ b/css/origin.css
@@ -75,5 +75,5 @@
 
   --lyric-icon-background-color: #222222;
   --lyric-font-size: 15px;
-  --lyric-line-margin: 13px;
+  --lyric-line-margin: 20px;
 }
